--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ charset-normalizer==3.4.1
 click==8.1.8
 coverage==7.6.12
 Flask==3.1.0
+flask-cors==6.0.1
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
+greenlet==3.2.3
 gunicorn==23.0.0
 idna==3.10
 iniconfig==2.0.0
